# Inventory-Management-System

./: Phases&Objectives.txt  ProjectOverview.txt  README.md  shortcuts.txt
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/bundle/msi/: Stockwise-alpha-ver-0.1.0_0.1.0_x64_en-US.msi
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: db.rs  main.rs
frontend/src/app/: App.tsx
frontend/src/app/components/: common.tsx
frontend/src/app/data/: liveData.tsx  mockData.ts
frontend/src/app/pages/: LivePages copy.txt  LivePages.tsx  LoginPage.tsx  Pages.tsx
frontend/src/app/services/: backend.ts
frontend/src/styles/: theme.css
prompts/: Phase0-to-completion.txt  Phase1-to-Completion.txt  Phase2-to-IncompletePhase3.txt
